# BraVal

./: BraVal.cabal  BracketsValidator.cabal  bracketsParser.py
src/: Main.hs
src/Text/: BraVal.hs  BracketsValidator.hs
src/Text/BraVal/: Report.hs  Types.hs
src/Text/BracketsValidator/: Types.hs
test/: Main.hs
