name:                BraVal
version:             0.1.0.0
synopsis:            "Validate your parens!"
-- description:         
homepage:            https://github.com/kindaro/BraVal
license:             ISC
license-file:        LICENSE
author:              Ignat Insarov
maintainer:          kindaro@gmail.com
-- copyright:           
category:            Text
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs: src
  exposed-modules:     Text.BraVal
  other-modules: Text.BraVal.Types
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10, transformers
  -- hs-source-dirs:      
  default-language:    Haskell2010

test-suite test
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Main.hs
    build-depends: base >=4.9 && <4.10, BraVal

executable BraVal
    hs-source-dirs: src
    main-is: Main.hs
    build-depends: base >=4.9 && <4.10, transformers
    other-modules: Text.BraVal, Text.BraVal.Types
